--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "expressjs": "^1.0.1",
+    "hbs": "^4.1.1",
     "minimist": "^1.2.5",
     "serverless-http": "^2.5.0"
   },
