--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Krishna Satya <vadapallikrishna@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "expressjs": "^1.0.1",
     "hbs": "^4.1.1",
     "minimist": "^1.2.5",
